# Add executable called "helloDemo" that is built from the source files
# "demo.cxx" and "demo_b.cxx". The extensions are automatically found.

add_executable (problem_1_1 problem_1_1.cpp)
add_executable (problem_1_2 problem_1_2.cpp)
add_executable (problem_1_3 problem_1_3.cpp)
add_executable (problem_1_4 problem_1_4.cpp)
add_executable (problem_2_1 problem_2_1.cpp)
add_executable (problem_2_2 problem_2_2.cpp)
add_executable (problem_2_3 problem_2_3.cpp)
add_executable (problem_3_1 problem_3_1.cpp)
add_executable (problem_3_2 problem_3_2.cpp)